cambios en teoria
videos, texto, y poco mas

--- a/Temas_acustica/Sonido.html
+++ b/Temas_acustica/Sonido.html
@@ -57,6 +57,8 @@
             física, el estudio del sonido implica comprender las propiedades de las ondas sonoras, su propagación y cómo
             interactúan con el entorno. Este ensayo profundizará en los conceptos fundamentales del sonido desde un
             punto de vista físico, cubriendo temas como las ondas sonoras, la amplitud, el tono y la resonancia.</p>
+        <img src="C:\Users\980022886\Downloads\ImagenesFisica\Acustica\Imagen4.png" alt="Historia acústica1">
+        <p>(By IA)</p>
 
         <h2>Ondas Sonoras</h2>
         <p>Las ondas sonoras son ondas longitudinales que se propagan a través de un medio al hacer que las partículas
