--- a/Temas_fisica_moderna/El_gato_de_Schrodinger.html
+++ b/Temas_fisica_moderna/El_gato_de_Schrodinger.html
@@ -38,7 +38,6 @@
             font-size: 36px;
             padding: 10px 0;
         }
-
     </style>
 </head>
 
@@ -52,12 +51,34 @@
         <a href="\Calculadora.html">Calculadora</a>
     </div>
     <div id="scrodinger">El gato de Scrödinger</div>
+    <div>
+        <h2>El gato de Schrödinger</h2>
+        <p>Es un famoso experimento mental propuesto por Erwin Schrödinger en 1935 para ilustrar los conceptos de
+            superposición cuántica y la interpretación de Copenhague de la mecánica cuántica.</p>
+        <h2>Origen</h2>
+        <p>Schrödinger ideó este experimento mental para criticar la interpretación de Copenhague de la mecánica
+            cuántica, que propone que un sistema cuántico como un átomo o un fotón puede existir en múltiples estados al
+            mismo tiempo, una condición conocida como superposición cuántica.</p>
+        <h2>El Experimento Mental</h2>
+        <p>El experimento involucra los siguientes elementos:</p>
+        <ul>
+            <li>Un gato encerrado en una caja de acero.</li>
+            <li>Un martillo mecánico.</li>
+            <li>Un frasco de ácido cianhídrico.</li>
+            <li>Una cantidad mínima de una sustancia radiactiva.</li>
+        </ul>
+        <p>Si un átomo de la sustancia radiactiva se desintegra, el martillo se libera, rompe el frasco y libera el
+            veneno, lo que resultaría en la muerte del gato. Si el átomo no se desintegra, el gato permanece vivo.</p>
+        <h2>La Paradoja</h2>
+        <p>Según la interpretación de Copenhague, hasta que no se abra la caja y se observe el estado del gato, este
+            está tanto vivo como muerto al mismo tiempo, en una superposición de estados. Esto ilustra la aparente
+            contradicción
 
-    <script>
-        function redirigir(ruta) {
-            window.location.href = ruta;
-        }
-    </script>
+            <script>
+                function redirigir(ruta) {
+                    window.location.href = ruta;
+                }
+            </script>
 </body>
 
 </html>
