--- a/Temas_fisica_moderna/Fisica_cuantica.html
+++ b/Temas_fisica_moderna/Fisica_cuantica.html
@@ -38,7 +38,6 @@
             font-size: 36px;
             padding: 10px 0;
         }
-
     </style>
 </head>
 
@@ -52,6 +51,42 @@
         <a href="\Calculadora.html">Calculadora</a>
     </div>
     <div id="cuantica">Física cuántica</div>
+    <div>
+        <h2>Física cuántica</h2>
+        <p>La física cuántica es una rama fundamental de la física que estudia los fenómenos que ocurren a escalas
+            microscópicas, como átomos y partículas subatómicas. Es una teoría que describe el comportamiento de la
+            materia y la energía en esos niveles y ha revolucionado nuestra comprensión del universo.</p>
+        <h2>Fundamentos</h2>
+        <p>Teoría Cuántica: Fundada por Max Planck en 1900, la teoría cuántica surgió para explicar por qué los objetos
+            calientes emiten luz en ciertos patrones.</p>
+        <p>Cuantización: La energía no es continua, sino que existe en paquetes discretos llamados “cuantos”. Esto fue
+            un cambio radical respecto a la física clásica.</p>
+        <h2>Principios Clave</h2>
+        <p>Principio de Incertidumbre de Heisenberg: Establece que no es posible conocer con precisión simultánea la
+            posición y la velocidad de una partícula.</p>
+        <p>Superposición Cuántica: La superposición cuántica es un principio que permite a las partículas estar en
+            varios estados posibles al mismo tiempo. Por ejemplo, un electrón puede pasar por dos rendijas
+            simultáneamente en el famoso experimento de la doble rendija. Sin embargo, cuando se mide, parece elegir un
+            estado único. Este proceso de “elección” se llama decoherencia, y es el mecanismo por el cual los estados
+            cuánticos se convierten en los estados clásicos que observamos.</p>
+        <p>Entrelazamiento Cuántico y no localidad: El entrelazamiento cuántico es otro fenómeno intrigante donde las
+            partículas entrelazadas, incluso separadas por grandes distancias, pueden afectarse instantáneamente entre
+            sí. Esto desafía nuestra comprensión de la causalidad y la velocidad de la luz como límite de velocidad del
+            universo. La no localidad es la idea de que las partículas pueden influirse mutuamente sin ninguna conexión
+            local en el espacio-tiempo.</p>
+        <h2>Desarrollos y Aplicaciones</h2>
+        <p>Computación Cuántica: Utiliza las propiedades de la superposición y el entrelazamiento para realizar cálculos
+            a velocidades increíblemente rápidas.</p>
+        <p>Criptografía Cuántica: Ofrece métodos de encriptación prácticamente inviolables basados en principios
+            cuánticos.</p>
+        <p>Teletransporte Cuántico: Permite la transferencia de información de un lugar a otro sin que esta pase por el
+            espacio intermedio.</p>
+        <h2>Desafíos y Debates</h2>
+        <p>Interpretación: A pesar de su éxito predictivo, la interpretación de la mecánica cuántica sigue siendo un
+            tema de debate.</p>
+        <p>Realidad Cuántica: La relación entre la mecánica cuántica y la realidad es compleja y desafía nuestra
+            intuición.</p>
+    </div>
 
     <script>
         function redirigir(ruta) {
