--- a/Temas_fisica_moderna/Fisica_de_particulas.html
+++ b/Temas_fisica_moderna/Fisica_de_particulas.html
@@ -38,7 +38,6 @@
             font-size: 36px;
             padding: 10px 0;
         }
-
     </style>
 </head>
 
@@ -52,12 +51,42 @@
         <a href="\Calculadora.html">Calculadora</a>
     </div>
     <div id="particulas">Física de partículas</div>
+    <div>
+        <div>
+            <h2>Física de partículas</h2>
+            <p>La física de partículas, también conocida como física de altas energías, es una rama de la física que se
+                dedica al estudio de los componentes más fundamentales de la materia y las interacciones entre ellos.
+            </p>
+            <h2>Componentes de la Materia</h2>
+            <ul>
+                <li><strong>Fermiones:</strong> Son las partículas constituyentes de la materia, con espín semientero.
+                    Incluyen a los quarks y leptones.</li>
+                <li><strong>Bosones:</strong> Tienen espín entero y son responsables de las interacciones entre
+                    fermiones. Incluyen al fotón, gluón, bosones W y Z, y el bosón de Higgs.</li>
+            </ul>
+            <h2>Modelo Estándar</h2>
+            <p>Es la teoría que actualmente describe las partículas fundamentales y sus interacciones. Según el modelo
+                estándar, hay 12 partículas fundamentales (6 quarks y 6 leptones), junto con sus antipartículas, y los
+                bosones mediadores de las fuerzas.</p>
+            <h2>Aceleradores de Partículas</h2>
+            <p>Son dispositivos que aceleran partículas a altas energías para observar colisiones que revelan
+                propiedades de las partículas. El Gran Colisionador de Hadrones (LHC) del CERN es uno de los más
+                conocidos.</p>
+            <h2>Aplicaciones</h2>
+            <ul>
+                <li>Medicina: Técnicas de diagnóstico como la tomografía por emisión de positrones (PET) y tratamientos
+                    como la terapia de protones.</li>
+                <li>Electrónica: Desarrollo de dispositivos que utilizan semiconductores.</li>
+                <li>Astropartículas: Estudio de rayos cósmicos y neutrinos, enriqueciendo la cosmología.</li>
+            </ul>
+        </div>
 
-    <script>
-        function redirigir(ruta) {
-            window.location.href = ruta;
-        }
-    </script>
+
+        <script>
+            function redirigir(ruta) {
+                window.location.href = ruta;
+            }
+        </script>
 </body>
 
 </html>
