--- a/Temas_fisica_moderna/Particulas_subatomicas.html
+++ b/Temas_fisica_moderna/Particulas_subatomicas.html
@@ -38,7 +38,6 @@
             font-size: 36px;
             padding: 10px 0;
         }
-
     </style>
 </head>
 
@@ -52,6 +51,45 @@
         <a href="\Calculadora.html">Calculadora</a>
     </div>
     <div id="particulas">Partículas subatómicas</div>
+    <div>
+        <h2>Partículas subatómicas</h2>
+        <p>Las partículas subatómicas son los componentes fundamentales de la materia, más pequeñas que el átomo y
+            esenciales para entender la estructura y el comportamiento del universo a nivel microscópico.</p>
+        <h2>Partículas Elementales</h2>
+        <ul>
+            <li><strong>Electrones:</strong> Partículas cargadas negativamente, con una masa muy pequeña, pero que
+                ocupan la mayor parte del volumen del átomo.</li>
+            <li><strong>Quarks:</strong> Constituyentes de protones y neutrones, existen en seis tipos o “sabores”:
+                arriba, abajo, encanto, extraño, cima y fondo.</li>
+            <li><strong>Neutrinos:</strong> Partículas neutras con masa extremadamente pequeña, interactúan débilmente
+                con la materia.</li>
+        </ul>
+        <h2>Partículas Compuestas</h2>
+        <ul>
+            <li><strong>Protones:</strong> Compuestos por tres quarks (dos arriba y uno abajo), tienen carga positiva y
+                se encuentran en el núcleo del átomo.</li>
+            <li><strong>Neutrones:</strong> También compuestos por tres quarks (uno arriba y dos abajo), son neutrales y
+                contribuyen a la masa del núcleo.</li>
+        </ul>
+        <h2>Interacciones Fundamentales</h2>
+        <p>Las partículas subatómicas interactúan a través de cuatro fuerzas fundamentales:</p>
+        <ul>
+            <li><strong>Fuerza Electromagnética:</strong> Mediada por fotones, afecta a partículas con carga eléctrica.
+            </li>
+            <li><strong>Fuerza Nuclear Fuerte:</strong> Mantiene unidos a los quarks dentro de protones y neutrones,
+                mediada por gluones.</li>
+            <li><strong>Fuerza Nuclear Débil:</strong> Responsable de ciertos tipos de desintegración radiactiva,
+                mediada por bosones W y Z.</li>
+            <li><strong>Gravitación:</strong> Aunque no está completamente descrita en el contexto de la física de
+                partículas, afecta a todas las partículas con masa.</li>
+        </ul>
+        <p>El estudio de las partículas subatómicas comenzó en el siglo XIX con el descubrimiento del electrón. A lo
+            largo del tiempo, se han descubierto muchas otras partículas, muchas de las cuales son inestables y solo se
+            pueden observar en aceleradores de partículas.</p>
+        <p>El conocimiento de las partículas subatómicas ha llevado a importantes avances en nuestra comprensión del
+            mundo físico y ha tenido aplicaciones prácticas en campos como la medicina, la electrónica y la astrofísica.
+        </p>
+    </div>
 
     <script>
         function redirigir(ruta) {
