--- a/Temas_fisica_moderna/Teoria_de_la_incertidumbre.html
+++ b/Temas_fisica_moderna/Teoria_de_la_incertidumbre.html
@@ -38,7 +38,6 @@
             font-size: 36px;
             padding: 10px 0;
         }
-
     </style>
 </head>
 
@@ -52,6 +51,51 @@
         <a href="\Calculadora.html">Calculadora</a>
     </div>
     <div id="incertidumbre">Teoría de la incertidumbre</div>
+    <div>
+        <h2>Teoría de la incertidumbre</h2>
+        <p>La Teoría de la Incertidumbre, también conocida como el Principio de Incertidumbre de Heisenberg, es un
+            concepto fundamental en la mecánica cuántica, formulado por el físico alemán Werner Heisenberg en 1927.</p>
+        <p>El principio establece que es imposible determinar simultáneamente y con precisión absoluta tanto la posición
+            como el momento (o velocidad) de una partícula subatómica. Esto no se debe a limitaciones en la tecnología
+            de medición, sino a la naturaleza misma de las partículas cuánticas.</p>
+        <p>En términos más simples, cuanto más precisamente sabemos la posición de una partícula, menos sabemos sobre su
+            momento, y viceversa. Esta relación intrínseca entre la posición y el momento se conoce como relación de
+            incertidumbre de posición-momento. Se puede expresar matemáticamente como:</p>
+        <p>Δx * Δp ≥ ħ/2 Donde:</p>
+        <ul>
+            <li>Δx es la incertidumbre en la posición de la partícula</li>
+            <li>Δp es la incertidumbre en el momento de la partícula</li>
+            <li>ħ es la constante de Planck reducida</li>
+        </ul>
+        <h2>La teoría de la incertidumbre de Heisenberg: Una mirada profunda a lo borroso del mundo cuántico</h2>
+        <p>En el corazón de la física cuántica reside un concepto fundamental que desafía nuestra intuición clásica: la
+            incertidumbre. El principio de incertidumbre de Heisenberg, postulado por el físico alemán Werner Heisenberg
+            en 1927, establece que existen límites inherentes a la precisión con la que podemos conocer simultáneamente
+            ciertas propiedades físicas de una partícula, como su posición y su momento.</p>
+        <p>En términos más simples, cuanto más precisamente sabemos la posición de una partícula, menos sabemos sobre su
+            momento, y viceversa. Esta relación intrínseca entre la posición y el momento se conoce como relación de
+            incertidumbre de posición-momento. Se puede expresar matemáticamente como:</p>
+        <p>Δx * Δp ≥ ħ/2 Donde:</p>
+        <ul>
+            <li>Δx es la incertidumbre en la posición de la partícula</li>
+            <li>Δp es la incertidumbre en el momento de la partícula</li>
+            <li>ħ es la constante de Planck reducida</li>
+        </ul>
+        <p>Esta relación fundamental tiene implicaciones profundas para nuestra comprensión del mundo a nivel cuántico.
+            Significa que es imposible determinar simultáneamente la posición y el momento de una partícula con perfecta
+            precisión.</p>
+        <h3>¿Pero por qué existe esta incertidumbre?</h3>
+        <p>La razón radica en la naturaleza dual de la onda-partícula de la materia a nivel cuántico. Las partículas
+            cuánticas, como los electrones, pueden exhibir tanto propiedades ondulatorias como de partículas. Cuando
+            intentamos medir la posición de una partícula, inevitablemente la perturbamos con un fotón (partícula de
+            luz). Esta interacción perturba el momento de la partícula, introduciendo una incertidumbre inevitable en
+            nuestra medición.</p>
+        <p>La incertidumbre de Heisenberg no se limita a la posición y el momento. Existen relaciones de incertidumbre
+            similares para otros pares de variables conjugadas, como la energía y el tiempo, o la carga y la fase. Estas
+            relaciones fundamentales son pilares de la mecánica cuántica y tienen un impacto significativo en diversos
+            fenómenos cuánticos, como la estructura atómica, la emisión de radiación y la conductividad eléctrica en
+            materiales.</p>
+    </div>
 
     <script>
         function redirigir(ruta) {
