--- a/Temas_fisica_moderna/Teoria_de_la_relatividad.html
+++ b/Temas_fisica_moderna/Teoria_de_la_relatividad.html
@@ -38,7 +38,6 @@
             font-size: 36px;
             padding: 10px 0;
         }
-
     </style>
 </head>
 
@@ -52,6 +51,26 @@
         <a href="\Calculadora.html">Calculadora</a>
     </div>
     <div id="relatividad">Teoría de la relatividad</div>
+    <div>
+        <h2>Teoría de la relatividad</h2>
+        <p>La Teoría de la Relatividad es un conjunto de dos teorías científicas desarrolladas por Albert Einstein a
+            principios del siglo XX: la Relatividad Especial y la Relatividad General. Estas teorías transformaron
+            nuestra comprensión del espacio, el tiempo y la gravedad.</p>
+        <h2>Relatividad Especial (1905)</h2>
+        <p><strong>Postulados:</strong> La velocidad de la luz en el vacío es constante y las leyes de la física son las
+            mismas en todos los sistemas de referencia inerciales.</p>
+        <p><strong>Consecuencias:</strong> Incluye la dilatación del tiempo (los relojes se mueven más lentamente a
+            altas velocidades), la contracción de la longitud (los objetos se acortan en la dirección del movimiento a
+            altas velocidades) y la equivalencia masa-energía expresada por la famosa ecuación ( E=mc^2 ).</p>
+        <h2>Relatividad General (1915)</h2>
+        <p><strong>Principio:</strong> La gravedad no es una fuerza, sino el resultado de la curvatura del
+            espacio-tiempo causada por la masa y la energía presentes.</p>
+        <p><strong>Predicciones:</strong> Incluye la deflexión de la luz por la gravedad, el desplazamiento al rojo
+            gravitacional y las ondas gravitacionales.</p>
+        <p>Estas teorías han sido confirmadas por numerosos experimentos y observaciones, y son fundamentales para la
+            física moderna, la cosmología y la tecnología, como los sistemas de posicionamiento global (GPS) que
+            requieren correcciones relativistas para funcionar con precisión.</p>
+    </div>
 
     <script>
         function redirigir(ruta) {
