--- a/Temas_acustica/Historia_acustica.html
+++ b/Temas_acustica/Historia_acustica.html
@@ -56,6 +56,8 @@
         <p>En la antigua Grecia, aproximadamente en el siglo VI a.C., Pitágoras realizó experimentos con cuerdas de
             diferentes longitudes para entender la relación entre la longitud de la cuerda y el tono producido, sentando
             así las bases para el estudio de la música y la acústica.</p>
+        <img src="C:\Users\980022886\Downloads\ImagenesFisica\Acustica\Imagen1.png" alt="Historia acústica1">
+        <p>(By IA)</p>
         <p>Durante el Renacimiento, en el siglo XV, Leonardo da Vinci investigó la propagación del sonido y su
             influencia en la arquitectura. Sus estudios contribuyeron al entendimiento de cómo la forma y disposición de
             los espacios afectan la calidad del sonido en lugares cerrados.</p>
@@ -66,6 +68,8 @@
             técnicas de construcción de instrumentos para mejorar la resonancia y la proyección del sonido. También
             descubrieron la influencia de la arquitectura en la acústica de espacios cerrados como iglesias y
             catedrales.</p>
+        <img src="C:\Users\980022886\Downloads\ImagenesFisica\Acustica\Imagen2.png" alt="Historia acústica1">
+        <p>(By IA)</p>
         <p>Hoy en día, con el avance de la tecnología, la acústica se ha convertido en una disciplina ampliamente
             utilizada en diversos campos como la arquitectura, la música, la ingeniería de sonido y la medicina.
             Mediante técnicas avanzadas, se busca mejorar la calidad del sonido en espacios cerrados, diseñar
