--- a/Temas_acustica/Energia.html
+++ b/Temas_acustica/Energia.html
@@ -38,7 +38,6 @@
             font-size: 36px;
             padding: 10px 0;
         }
-
     </style>
 </head>
 
@@ -52,6 +51,33 @@
         <a href="\Calculadora.html">Calculadora</a>
     </div>
     <div id="energia">Energía de movimiento ondulatorio</div>
+    <div>
+        <h2>El Movimiento de Ondas en Columnas de Aire</h2>
+        <p>El movimiento de ondas en columnas de aire es un proceso complejo que implica la transferencia de energía de
+            un punto a otro. Esta transferencia de energía es esencial para la propagación del sonido y está
+            influenciada por varios factores, incluyendo la longitud y geometría de la columna de aire, la temperatura
+            del aire y la presencia de obstáculos o aberturas.</p>
+        <p>La transferencia de energía en columnas de aire se puede entender examinando el comportamiento de las ondas
+            estacionarias, que se forman cuando una onda se refleja de un lado a otro dentro de un espacio confinado. En
+            el caso de las columnas de aire de extremo cerrado, el patrón de onda estacionaria se establece por la
+            reflexión de la onda en el extremo cerrado, lo que resulta en un nodo en ese extremo y un antinodo en el
+            extremo abierto. La longitud de una columna de aire de extremo cerrado está relacionada matemáticamente con
+            la longitud de onda de la onda que resuena dentro de ella, siendo la longitud un cuarto de la longitud de
+            onda para el primer armónico.</p>
+        <p>En las columnas de aire de extremo abierto, el patrón de onda estacionaria es diferente, con el antinodo
+            ubicado en el extremo abierto y el nodo en el extremo cerrado. La longitud de una columna de aire de extremo
+            abierto para el primer armónico es la mitad de la longitud de onda de la onda. Esta diferencia en los
+            patrones de onda estacionaria entre las columnas de aire de extremo cerrado y de extremo abierto da como
+            resultado características distintas de transferencia de energía, con las columnas de aire de extremo abierto
+            generalmente exhibiendo una eficiencia de transferencia de energía más alta debido a la presencia de dos
+            antinodos.</p>
+        <p>La transferencia de energía en columnas de aire también está influenciada por la temperatura del aire, ya que
+            la velocidad del sonido depende de la temperatura. Un cambio en la temperatura resultará en un cambio en la
+            velocidad del sonido, lo que a su vez afectará la longitud de onda y la frecuencia de la onda estacionaria,
+            influyendo en última instancia en la transferencia de energía. Esta dependencia de la temperatura es
+            particularmente relevante para los instrumentos musicales, ya que las variaciones en la temperatura pueden
+            afectar significativamente su calidad de sonido y afinación.</p>
+    </div>
 
     <script>
         function redirigir(ruta) {
