--- a/Temas_acustica/Ley_inverso.html
+++ b/Temas_acustica/Ley_inverso.html
@@ -52,13 +52,13 @@
     </div>
     <div id="inverso">Ley inverso del cuadrado para la intensidad</div>
     <div>
-        <h2>Ley del Inverso del Cuadrado para la Intensidad</h2>
-        <p>La ley del inverso del cuadrado describe cómo la intensidad de ciertos fenómenos físicos disminuye de manera
-            inversamente proporcional al cuadrado de la distancia al centro de la fuente. Esta ley se aplica a diversos
-            campos, como la gravedad, el campo eléctrico, la luz, el sonido y la radiación.</p>
-        <p>En términos generales, la intensidad de la influencia en cualquier radio dado "r" es la intensidad de la
-            fuente en el origen dividida por el área de la esfera que rodea la fuente, lo que resulta en una disminución
-            rápida de la intensidad a medida que nos alejamos de la fuente (HyperPhysics).</p>
+        <h2>Ley del inverso del cuadrado para la intensidad</h2>
+        <p>Describe cómo la intensidad de ciertos fenómenos físicos disminuye de manera inversamente proporcional al
+            cuadrado de la distancia al centro de la fuente. Esta ley se aplica a diversos campos, como la gravedad, el
+            campo eléctrico, la luz, el sonido y la radiación. En términos generales, la intensidad de la influencia en
+            cualquier radio dado "r" es la intensidad de la fuente en el origen dividida por el área de la esfera que
+            rodea la fuente, lo que resulta en una disminución rápida de la intensidad a medida que nos alejamos de la
+            fuente (HyperPhysics).</p>
         <p>La ley del inverso del cuadrado se basa en consideraciones geométricas y se aplica a fuentes puntuales que
             extienden su influencia en todas las direcciones por igual, sin límite de alcance. Por ejemplo, en el caso
             del campo gravitatorio, la aceleración de la gravedad es una expresión de la intensidad del campo
@@ -69,6 +69,7 @@
             alejamos de la fuente, lo que tiene implicaciones importantes en la acústica y el diseño de espacios como
             auditorios (HyperPhysics).</p>
     </div>
+
 
     <script>
         function redirigir(ruta) {
