--- a/Temas_acustica/Movimiento_periodico.html
+++ b/Temas_acustica/Movimiento_periodico.html
@@ -38,7 +38,6 @@
             font-size: 36px;
             padding: 10px 0;
         }
-
     </style>
 </head>
 
@@ -52,6 +51,39 @@
         <a href="\Calculadora.html">Calculadora</a>
     </div>
     <div id="movimiento_periodico">Movimiento periódico</div>
+    <div>
+        <h2>Movimiento periódico</h2>
+        <p>El movimiento periódico en acústica se refiere a la vibración de un objeto o la oscilación de una cantidad
+            física, como la presión o el desplazamiento, que se repite a intervalos regulares. Este concepto es
+            fundamental en el estudio del sonido y las ondas, ya que subyace a la generación y propagación del sonido en
+            diversos medios (Hall, 2013).</p>
+        <h3>Definición y fórmulas</h3>
+        <p>El movimiento periódico se puede caracterizar por varios parámetros, incluida la amplitud, la frecuencia, la
+            frecuencia angular y el ángulo de fase. La amplitud (A) es el desplazamiento máximo desde la posición de
+            equilibrio, mientras que la frecuencia (f) representa el número de ciclos por unidad de tiempo (Serway &
+            Jewett, 2014). La frecuencia angular (ω) está relacionada con la frecuencia mediante la ecuación ω = 2πf, y
+            el ángulo de fase (φ) determina el punto inicial del movimiento dentro de un ciclo.</p>
+        <p>La representación matemática del movimiento periódico en acústica a menudo implica funciones trigonométricas,
+            como funciones sinusoidales o cosinusoidales. Para un movimiento armónico simple, el desplazamiento (x) en
+            función del tiempo (t) se puede expresar como:</p>
+        <p>x(t) = A * sin(ωt + φ)</p>
+        <p>o</p>
+        <p>x(t) = A * cos(ωt - π/2 + φ)</p>
+        <p>Estas fórmulas muestran que el desplazamiento oscila entre -A y A, con un período T = 1/f, y un desfase
+            determinado por φ (Rossing, 2007).</p>
+        <h3>Mecanismos y aplicaciones</h3>
+        <p>En acústica, el movimiento periódico es responsable de la generación de ondas sonoras a través de objetos que
+            vibran, como cuerdas, membranas o columnas de aire. Cuando un objeto vibra, desplaza el medio circundante
+            (por ejemplo, el aire), creando variaciones de presión que se propagan en forma de ondas (Fletcher &
+            Rossing, 2019).</p>
+        <p>Un ejemplo de movimiento periódico en acústica es la vibración de una cuerda, como en una guitarra o un
+            violín. El movimiento de la cuerda se puede aproximar como un movimiento armónico simple, con la amplitud,
+            frecuencia y ángulo de fase dependiendo de las propiedades de la cuerda (tensión, masa y longitud) y del
+            mecanismo de excitación (Hall, 2013).</p>
+        <p>Otro ejemplo es la vibración de una columna de aire en un instrumento de viento, como una flauta o un
+            clarinete. En este caso, el movimiento periódico lo generan la lengüeta o los labios, que periódicamente
+            interrumpen el flujo de aire y hacen que la columna de aire vibre (McIntyre & Woodhouse, 2018).</p>
+    </div>
 
     <script>
         function redirigir(ruta) {
