--- a/Temas_acustica/Potencia.html
+++ b/Temas_acustica/Potencia.html
@@ -38,7 +38,6 @@
             font-size: 36px;
             padding: 10px 0;
         }
-
     </style>
 </head>
 
@@ -52,6 +51,25 @@
         <a href="\Calculadora.html">Calculadora</a>
     </div>
     <div id="potencia">Potencia media de una onda senoidal</div>
+    <div>
+        <h2>Poder promedio de una onda sinusoidal</h2>
+        <p>El poder promedio de una onda sinusoidal es un concepto fundamental en la física y la ingeniería. Es el valor
+            medio del poder instantáneo, y su cálculo tiene en cuenta el signo de la onda. En el caso de una onda
+            sinusoidal, el poder promedio es cero porque, durante un período de la onda, la mitad de ella tiene un signo
+            positivo y la otra mitad tiene un signo negativo, lo que resulta en un valor medio de cero.</p>
+        <p>Sin embargo, el concepto de poder promedio es esencial para entender el comportamiento de las ondas
+            sinusoidales en circuitos eléctricos. Por ejemplo, en un circuito resistivo, el poder promedio se calcula
+            multiplicando los valores eficaces del voltaje y la corriente, similar al cálculo en un circuito de
+            corriente directa. El valor eficaz del voltaje se obtiene elevándolo al cuadrado y luego tomando la raíz
+            cuadrada, lo que evita casos de poder nulo.</p>
+        <p>En el caso de un resistor conectado a una fuente de voltaje sinusoidal alterna, el poder promedio se puede
+            calcular utilizando la siguiente fórmula:</p>
+        <p>P = V<sub>ef</sub> × I<sub>ef</sub></p>
+        <p>donde P es el poder promedio, V<sub>ef</sub> es el valor eficaz del voltaje y I<sub>ef</sub> es el valor
+            eficaz de la corriente. Esta fórmula es válida porque, en un circuito resistivo, el voltaje y la corriente
+            están en fase, y el poder promedio es igual al producto de los valores eficaces del voltaje y la corriente.
+        </p>
+    </div>
 
     <script>
         function redirigir(ruta) {
