--- a/Temas_acustica/Vibracion.html
+++ b/Temas_acustica/Vibracion.html
@@ -38,7 +38,6 @@
             font-size: 36px;
             padding: 10px 0;
         }
-
     </style>
 </head>
 
@@ -52,6 +51,33 @@
         <a href="\Calculadora.html">Calculadora</a>
     </div>
     <div id="vibracion">Vibración en columnas de aire</div>
+    <div>
+        <h2>Vibración en Columnas de Aire</h2>
+        <p>La vibración en columnas de aire es un concepto fundamental en acústica y física, desempeñando un papel
+            crucial en la comprensión de la propagación del sonido y los fenómenos de resonancia. Cuando una columna de
+            aire se pone en vibración, produce ondas sonoras que pueden ser manipuladas y estudiadas para obtener
+            información sobre el comportamiento de las ondas en diferentes medios. Este fenómeno es ampliamente
+            explorado en diversos trabajos científicos, arrojando luz sobre los principios que rigen la interacción
+            entre el sonido y las columnas de aire.</p>
+        <p>Según Fletcher y Rossing (1998), la vibración de las columnas de aire es un tema clave en el campo de la
+            acústica, con implicaciones para instrumentos musicales, acústica arquitectónica y el diseño de sistemas de
+            sonido. Los autores profundizan en las complejidades de cómo las columnas de aire vibran a diferentes
+            frecuencias, lo que lleva a la producción de sonidos distintos. Al estudiar los patrones de vibración de las
+            columnas de aire, los investigadores pueden analizar los armónicos y las frecuencias resonantes que definen
+            el timbre y la calidad del sonido producido.</p>
+        <p>En su investigación, Kinsler et al. (1982) enfatizan la importancia de entender el comportamiento de las
+            columnas de aire en relación con las ondas sonoras. Discuten cómo la longitud y la geometría de una columna
+            de aire influyen en sus modos vibratorios y en el sonido resultante producido. Al manipular la longitud de
+            la columna o cambiar sus condiciones de contorno, los investigadores pueden observar cambios en las
+            frecuencias en las que la columna resuena, proporcionando valiosas ideas sobre la física de la propagación
+            del sonido.</p>
+        <p>Además, Rossing (2007) destaca las aplicaciones prácticas de estudiar la vibración en columnas de aire,
+            especialmente en el contexto de instrumentos musicales. El autor explica cómo instrumentos como flautas,
+            clarinetes y tubos de órgano se basan en los principios de la vibración de la columna de aire para producir
+            tonos y tonalidades específicos. Al ajustar la longitud de la columna de aire o modificar el diseño del
+            instrumento, los músicos pueden controlar la salida de sonido, demostrando la relación directa entre la
+            vibración de la columna de aire y la expresión musical.</p>
+    </div>
 
     <script>
         function redirigir(ruta) {
