--- a/Temas_acustica/Movimiento_armonico_simple.html
+++ b/Temas_acustica/Movimiento_armonico_simple.html
@@ -38,7 +38,6 @@
             font-size: 36px;
             padding: 10px 0;
         }
-
     </style>
 </head>
 
@@ -52,6 +51,47 @@
         <a href="\Calculadora.html">Calculadora</a>
     </div>
     <div id="movimiento">Movimiento armónico simple</div>
+    <div>
+        <h2>Movimiento Armónico Simple (MAS)</h2>
+        <p>El Movimiento Armónico Simple (MAS) es un tipo de movimiento periódico que se caracteriza por tener una
+            trayectoria rectilínea y una aceleración proporcional y opuesta a la posición. Este movimiento se encuentra
+            presente en numerosos fenómenos naturales y es fundamental en la física y la ingeniería.</p>
+        <h3>Definición y Características</h3>
+        <p>En el MAS, un objeto oscila en torno a una posición de equilibrio con una aceleración proporcional y opuesta
+            a su desplazamiento. Esto significa que la fuerza restauradora es proporcional al desplazamiento y actúa en
+            dirección opuesta al mismo.</p>
+        <h3>Fórmula y Cálculos</h3>
+        <p>La ecuación que describe matemáticamente el MAS es:</p>
+        <p>x(t) = A ⋅ cos(ωt + ϕ)</p>
+        <p>Donde:</p>
+        <ul>
+            <li>x(t) es la posición en función del tiempo.</li>
+            <li>A es la amplitud de la oscilación.</li>
+            <li>ω es la frecuencia angular.</li>
+            <li>t es el tiempo.</li>
+            <li>ϕ es la fase inicial.</li>
+        </ul>
+        <p>Según la Universidad Nacional del Litoral, "Controversias en el tratamiento del movimiento oscilatorio
+            armónico simple," la frecuencia angular ω se calcula como:</p>
+        <img src="C:\Users\980022886\Downloads\ImagenesFisica\Acustica\Imagen5.png" alt="Fórmula de frecuencia angular">
+        <p>Donde:</p>
+        <ul>
+            <li>f es la frecuencia.</li>
+            <li>k es la constante elástica del resorte.</li>
+            <li>m es la masa del objeto.</li>
+        </ul>
+        <h3>Funcionamiento</h3>
+        <p>En el MAS, el objeto oscila de un lado a otro alrededor de su posición de equilibrio, pasando por puntos de
+            máxima amplitud y puntos de reposo. La energía cinética y potencial se intercambian a medida que el objeto
+            se mueve, manteniendo la oscilación.</p>
+        <h3>Aplicaciones</h3>
+        <p>El MAS se aplica en sistemas de resortes, péndulos, circuitos eléctricos, vibraciones mecánicas, entre otros.
+            Según la Universidad del País Vasco, "Movimiento armónico simple y oscilador amortiguado," su estudio es
+            fundamental para comprender fenómenos oscilatorios en la naturaleza y en la tecnología.</p>
+        <p>En resumen, el Movimiento Armónico Simple es un concepto fundamental en la física que describe oscilaciones
+            periódicas en sistemas físicos, con una ecuación característica y aplicaciones prácticas en diversos campos
+            de la ciencia y la ingeniería.</p>
+    </div>
 
     <script>
         function redirigir(ruta) {
