--- a/Temas_acustica/Ondas.html
+++ b/Temas_acustica/Ondas.html
@@ -38,7 +38,6 @@
             font-size: 36px;
             padding: 10px 0;
         }
-
     </style>
 </head>
 
@@ -52,7 +51,29 @@
         <a href="\Calculadora.html">Calculadora</a>
     </div>
     <div id="ondas">Ondas electromagnéticas</div>
-
+    <div>
+        <h2>Ondas electromagnéticas</h2>
+        <p>Las ondas electromagnéticas son un tipo de onda que puede propagarse a través del vacío, a diferencia de las
+            ondas mecánicas que requieren un medio para viajar. Estas ondas se caracterizan por sus componentes de campo
+            eléctrico y magnético, que oscilan perpendicularmente entre sí y a la dirección de propagación de la onda.
+            Las ondas electromagnéticas abarcan un amplio espectro, que incluye ondas de radio, microondas, infrarrojas,
+            luz visible, ultravioleta, rayos X y rayos gamma.</p>
+        <p>El comportamiento de las ondas electromagnéticas está influenciado por factores como la frecuencia, la
+            longitud de onda y el medio por el que viajan. Por ejemplo, la frecuencia de una onda electromagnética
+            determina su posición en el espectro electromagnético, mientras que la longitud de onda es inversamente
+            proporcional a la frecuencia. La velocidad de las ondas electromagnéticas en el vacío es constante y es
+            aproximadamente de 299,792 kilómetros por segundo, que es la velocidad de la luz.</p>
+        <p>Las ondas electromagnéticas pueden interactuar con la materia de diversas formas, como absorción, reflexión,
+            refracción y difracción. Estas interacciones pueden provocar cambios en las propiedades de la onda, como su
+            dirección, frecuencia o amplitud. Por ejemplo, cuando una onda electromagnética encuentra un conductor,
+            puede inducir una corriente eléctrica en el conductor, lo que lleva a la reflexión o absorción de la onda.
+        </p>
+        <p>Un aspecto importante de las ondas electromagnéticas es su capacidad para transmitir energía. Esta energía se
+            puede aprovechar para diversas aplicaciones, como en comunicación inalámbrica, imágenes médicas y
+            transmisión de energía. Por ejemplo, las ondas de radio se utilizan en la comunicación inalámbrica para
+            transmitir información a largas distancias, mientras que las ondas infrarrojas se utilizan en los controles
+            remotos para enviar señales entre dispositivos.</p>
+    </div>
     <script>
         function redirigir(ruta) {
             window.location.href = ruta;
