--- a/Sobre_nosotros.html
+++ b/Sobre_nosotros.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre nosotros</title>
+    <link rel="stylesheet" href="styles.css">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -39,6 +40,33 @@
         <a href="Conversor.html">Conversor de Unidades</a>
         <a href="Sobre_nosotros.html">Sobre Nosotros</a>
         <a href="Calculadora.html">Calculadora</a>
+    </div>
+
+    <div class="container">
+        <div class="box">
+            <img src="C:\Users\980022886\Downloads\ImagenesFisica\Optica\Imagen14.png" alt="yerpy;b">
+            <p class="description">Contreras Jonathan Yahir</p>
+        </div>
+        <div class="box">
+            <img src="C:\Users\980022886\Downloads\ImagenesFisica\Optica\Imagen14.png" alt="Alexis">
+            <p class="description">Guadarrama Cruz Alexis </p>
+        </div>
+        <div class="box">
+            <img src="C:\Users\980022886\Downloads\ImagenesFisica\Optica\Imagen14.png" alt="Marian">
+            <p class="description">Hernandez Garcia Marian Lizeth</p>
+        </div>
+        <div class="box">
+            <img src="C:\Users\980022886\Downloads\ImagenesFisica\Optica\Imagen14.png" alt="Gabi">
+            <p class="description">Manzano Ruiz Gabriel</p>
+        </div>
+        <div class="box">
+            <img src="C:\Users\980022886\Downloads\ImagenesFisica\Optica\Imagen14.png" alt="Jise">
+            <p class="description">Perusquia Hernandez Jose Miguel </p>
+        </div>
+        <div class="box">
+            <img src="C:\Users\980022886\Downloads\ImagenesFisica\Optica\Imagen14.png" alt="¿?">
+            <p class="description">Descripción 2</p>
+        </div>
     </div>
 </body>
 
